Fix deprecations and warnings for JDK > 8